# adam-kb-workflow-automation

./: .gitignore  LICENSE  README  README.MD  extract_pdf_text.py  pdf_sorterv2.py  pyproject.toml  requirements.txt  run_ocr.py  run_ocr2.py
adam_kb_workflow_automation/: file_operations.py  ocr.py  triage.py
pdf_text_layer_package/: README.MD  file_operations.py  pdf2pdf_ocr.py
pdftext_layer_lib/: triage.py
pdftext_layer_lib/Examples/Challenging_complex table/OCR_Results/: [OCR] Challenging_split_complex table.txt
pdftext_layer_lib/Examples/Golden_single-column_scanned/OCR_Results_2025-06-19_17-03-08/: [OCR] Golden_single-column_scanned.txt
quality_check/: Data_Quality_Control_Review_Tool.html
quality_check/sample_json_files/: agri_article_multipurpose_crops.json  urban_gardening_trends.json
quality_control_tools/: Data_Quality_Control_Review_Tool.html  README.txt
quality_control_tools/sample_json_files/: ai_edge_trends_2025.json
requirements/: requirements.txt
scripts/: pdf_sorter.py  pdf_sorterv2.py
